--- a/iashell/iaforms/iaforms.csproj
+++ b/iashell/iaforms/iaforms.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -104,6 +105,7 @@
     <Compile Include="AllowedXMLWriter.cs" />
     <Compile Include="AllowItems.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CSVLogFileReader.cs" />
     <Compile Include="DrivePropertiesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,12 +118,28 @@
     <Compile Include="DriveImagesForm.Designer.cs">
       <DependentUpon>DriveImagesForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileObject.cs" />
+    <Compile Include="FileSystemEvents.cs" />
     <Compile Include="IAAdminInfo.cs" />
+    <Compile Include="ImageLogs.cs" />
+    <Compile Include="ImagePathList.cs" />
     <Compile Include="ImagePreview.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ImagePreview.Designer.cs">
       <DependentUpon>ImagePreview.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImportQueueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImportQueueForm.Designer.cs">
+      <DependentUpon>ImportQueueForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ImportSourceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImportSourceForm.Designer.cs">
+      <DependentUpon>ImportSourceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LogViewForm.cs">
       <SubType>Form</SubType>
@@ -136,9 +154,16 @@
       <DependentUpon>MetadataForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LaunchAdmin.cs" />
+    <Compile Include="NetworkComputersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NetworkComputersForm.Designer.cs">
+      <DependentUpon>NetworkComputersForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ResponsivePictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ScanDirectory.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -255,11 +280,20 @@
     <EmbeddedResource Include="ImagePreview.resx">
       <DependentUpon>ImagePreview.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ImportQueueForm.resx">
+      <DependentUpon>ImportQueueForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImportSourceForm.resx">
+      <DependentUpon>ImportSourceForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LogViewForm.resx">
       <DependentUpon>LogViewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MetadataForm.resx">
       <DependentUpon>MetadataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NetworkComputersForm.resx">
+      <DependentUpon>NetworkComputersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
